# an-llm-flies-x-plane-rs

./: .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  NOTAMS.md  README.md  dist-workspace.toml
config/: aircraft_c172.yaml  airport_defaults.yaml  controller_gains.yaml  safety_limits.yaml
scripts/: measure_flap_drag.py  run_model_evals.sh  test_dead_stick_kwhp.py
scripts/eval/: README.md  run_scenario.py
scripts/eval/scenarios/: deadstick_kwhp_12.yaml  taxi_after_landing_kwhp_12.yaml  taxi_only_kwhp.yaml
src/: bus.rs  config.rs  eval_runner.rs  lib.rs  live_runner.rs  main.rs  track.rs  tui.rs  tui_v2.rs  types.rs
src/control/: bank_hold.rs  centerline_rollout.rs  ground_speed.rs  mod.rs  nose_wheel.rs  pid.rs  pitch_for_airspeed.rs  pitch_hold.rs  tecs_lite.rs
src/core/: dead_stick_profile.rs  mission_manager.rs  mod.rs  mode_manager.rs  profiles.rs  safety_monitor.rs  state_estimator.rs
src/data/: airspace.rs  airspace_query.rs  apt_dat.rs  mod.rs  parquet.rs
src/guidance/: flare_profile.rs  lateral.rs  mod.rs  pattern_manager.rs  route_manager.rs  runway_geometry.rs  taxi_route.rs
src/llm/: anthropic.rs  backend.rs  conversation.rs  gemini.rs  mod.rs  openai.rs  responses_client.rs  system_prompt.md  system_prompt_realistic_overlay.md  tools.rs
src/sim/: datarefs.rs  logging.rs  mod.rs  plotting.rs  scenario.rs  simple_bridge.rs  simple_dynamics.rs  taxi_dynamics.rs  xplane_bridge.rs
src/transcribe/: audio.rs  deepgram_ws.rs  keyterms.rs  mod.rs  ptt.rs  realtime_ws.rs
tests/: test_airspace_heartbeat.rs  test_bus.rs  test_centerline_rollout.rs  test_cli.rs  test_conversation.rs  test_dead_stick_scenario.rs  test_eval_runner.rs  test_heartbeat_pump.rs  test_intersection_departure.rs  test_lateral_rescue.rs  test_live_intents.rs  test_logging.rs  test_mode_transitions.rs  test_pattern_atc.rs  test_pattern_geometry.rs  test_plotting.rs  test_profiles.rs  test_safety_monitor.rs  test_scenario.rs  test_status_display.rs  test_taxi_scenario.rs  test_tecs_lite.rs  test_tool_dispatch.rs  test_tui_input.rs  test_xplane_bridge.rs
tests/common/: mod.rs
