[package]
name = "xplane-pilot"
version = "0.1.0"
edition = "2021"
description = "Rust port of the LLM-driven X-Plane 12 pilot (xplane-pilot / sim_pilot)."

[[bin]]
name = "sim-pilot"
path = "src/main.rs"

[lib]
name = "xplane_pilot"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
parking_lot = "0.12"
once_cell = "1"
crossbeam-channel = "0.5"
ureq = { version = "2", features = ["json"] }
tungstenite = "0.23"
url = "2"
duckdb = { version = "1", features = ["bundled", "json"] }
serde_yaml_ng = "0.10"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
approx = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
