[package]
name = "an-llm-flies-xplane"
version = "0.5.0"
edition = "2021"
description = "An LLM-driven pilot for X-Plane 12. Rust port of the Python sim_pilot project."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wiseman/an-llm-flies-x-plane-rs"
readme = "README.md"

[[bin]]
name = "sim-pilot"
path = "src/main.rs"

[lib]
name = "xplane_pilot"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
parking_lot = "0.12"
once_cell = "1"
crossbeam-channel = "0.5"
ureq = { version = "2", features = ["json"] }
tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
cpal = "0.15"
rubato = "0.15"
url = "2"
duckdb = { version = "1", features = ["bundled", "json"] }
serde_yaml_ng = "0.10"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
ctrlc = { version = "3", features = ["termination"] }

[dev-dependencies]
tempfile = "3"
approx = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
